tests/outref/TBP004.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: TABLEOFDOGS
Error with syntax near (line 2, column 30):

UPDATE myTable
SET name = (SELECT name FROM tableOfDogs WHERE breed = "Black lab");
                             ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: UPDATE myTable
SET name = (SELECT name FROM tableOfDogs WHERE breed = "Black lab");

